--- a/app/views/posts/prefecture.html.erb
+++ b/app/views/posts/prefecture.html.erb
@@ -37,6 +37,7 @@
 
         <div class="box2">
           <div class="box-title">
+            <i class="fas fa-bookmark" aria-hidden="true" style="color: blue;"></i>
             Prefecture
           </div>
           <div class="prefecture-link">
