--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,9 +17,9 @@
             <% end %>
           </ul>  
         </div>
-      
         <div class="box2">
           <div class="box-title">
+            <i class="fas fa-bookmark" aria-hidden="true" style="color: blue;"></i>
             Ranking
           </div>
           <ul class="list_crown">
@@ -33,6 +33,7 @@
             <% end %>
           </ul>
         </div>
+      
 
         <div class="box2">
           <div class="box-title">
