--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,13 +31,13 @@
             <tr>
             <tr>
               <td>
-                <span class="follow">
-                  <%= link_to follower_path(@post.user) do %>
+                <span class="user-follow">
+                  <%= link_to follower_path(@post.user), class: "btn btn-success" do %>
                     <%= @post.user.follower.count %> フォロー
                   <% end %>
                 </span>
-                <span class="follower">
-                  <%= link_to followed_path(@post.user) do %>
+                <span class="user-follower">
+                  <%= link_to followed_path(@post.user), class: "btn btn-success" do %>
                     <%= @post.user.followed.count %> フォロワー
                   <% end %>
                 </span>
@@ -45,20 +45,22 @@
             </tr>
             <tr>
               <td>
-                <span class="user-favorites">
-                  <%= link_to "いいね一覧", favorite_path(@post.user) %>
-                </span>
-                <span class="user-bookmarks">
-                  <% if @post.user.id == current_user.id %>
-                    <%= link_to "行ってみたい一覧", bookmark_path(@post.user) %>
-                  <% end %>
-                </span>
+                <div class="my-list">
+                  <span class="user-favorites">
+                    <%= link_to "いいね一覧", favorite_path(@post.user), class: "btn btn-success" %>
+                  </span>
+                  <span class="user-bookmarks">
+                    <% if @post.user.id == current_user.id %>
+                      <%= link_to "行ってみたい一覧", bookmark_path(@post.user), class: "btn btn-success" %>
+                    <% end %>
+                  </span>
+                </div>
               </td>
             </tr>
           </table>
 
           <% if @post.user == current_user %>
-            <%= link_to "編集", edit_user_path(@post.user) %>
+            <%= link_to "編集", edit_user_path(@post.user), class: "btn btn-primary" %>
           <% else %>
             <% unless @post.user == current_user %>
               <% if current_user.following(@post.user) %>
@@ -189,9 +191,8 @@
 
           <div class="text-right" style="margin-top: 30px;">
             <% if @post.user_id == current_user.id %>
-              <%= link_to "編集", edit_post_path(@post) %>
-              |
-              <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に消しますか？"} %>
+              <%= link_to "編集", edit_post_path(@post), class: "btn btn-primary" %>
+              <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-danger" %>
             <% end %>
           </div>
 
