--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,6 +20,7 @@
 
         <div class="box2">
           <div class="box-title">
+            <i class="fas fa-bookmark" aria-hidden="true" style="color: blue;"></i>
             Ranking
           </div>
           <ul class="list_crown">
