--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -155,7 +155,7 @@
           </div>
 	        
           <span class="favorite-count">
-            <span class="post_<%= @post.id %>">
+            <span class="favorite_<%= @post.id %>">
               <%= render 'favorites/favorite', post: @post %>
             </span>
 	        </span>
