--- a/app/views/posts/category.html.erb
+++ b/app/views/posts/category.html.erb
@@ -3,22 +3,11 @@
   <h2 class="text-center page-title">カテゴリー "<%= @category.name %>" の投稿一覧</h2>
 
   <div class="col-xs-4">
-    <div class="box2">
-      <div class="box-title">カテゴリー一覧</div>
-      <ul class="list-category">
-        <% @categories.each do |category| %>
-          <li>
-            <%= link_to category_path(@post, name: category.name) do %>
-              <%= category.name %>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render 'posts/category',  categories: @categories %>
   </div>
 
   <div class="col-xs-8">
-    <%= render 'posts/index' , posts: @posts %>
+    <%= render 'posts/index', posts: @posts %>
   </div>
   
 </div>
