--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,16 +3,8 @@
   <div class="col-xs-3"></div>
   <div class="col-xs-6">
 
-    <div class="errors">
-      <%= form_with model: @post, local: true do |f| %>
-        <% if @post.errors.any? %>
-          <%= @post.errors.count %>件のエラーが発生しました
-          <% @post.errors.full_messages.each do |message| %>
-            <%= message %>
-          <% end %>
-        <% end %>
-      <% end %>
-    </div>
+    <%= render 'posts/errors', obj: @post %>
+    
   
     <div class="sub-post-text">
       <p class="text-center">
@@ -21,37 +13,8 @@
       </p>
     </div>
 
-    <%= form_with model: @post, local: true do |f| %>
-      <div class="field row">
-        <%= f.label :タイトル %>
-        <%= f.text_field :title, class: "form-control", placeholder:"タイトル" %>
-      </div>
-      <div class="field row">
-        <%= f.label :prefecture, '都道府県' %><br>
-        <%= f.select :prefecture, Post.prefectures.keys, {prompt: '選択してください'}, class: 'signup_input signup_input--prefecture error-form--prefecture'%>
-      </div>
-      <div class="field row">
-        <%= f.label :category, 'カテゴリー' %><br>
-        <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |category| %> 
-          <%= category.label do %>
-            <%= category.check_box %>
-            <%= category.text %>
-          <% end %>
-        <% end %>
-      </div>
-      <div class="field row">
-        <%= f.label :投稿内容 %>
-        <%= f.text_area :body, class: "form-control", placeholder:"投稿内容" %>
-      </div>
-      <div class="field row">
-        <%= f.label :画像選択 %>(複数可能)
-        <%= f.attachment_field :post_images_images, multiple:true %>
-      </div>
-      <div class="field row">
-        <%= f.submit "編集", class: "btn btn-primary btn-block" %>
-      </div>
-    <% end %>
-  
+    <%= render 'posts/edit_form', form: @post %>
+    
     <%= link_to "戻る", post_path(@post) %>
 
   </div>
