--- a/app/views/posts/hashtag.html.erb
+++ b/app/views/posts/hashtag.html.erb
@@ -1,7 +1,7 @@
-<div class="container"> 
+<div class="container">
   <div class="row">
 
-    <h2 class="text-center">ハッシュタグ "<%= @hashtag.hashname %>" の投稿一覧</h2>
+    <h2 class="text-center page-title">ハッシュタグ "<%= @hashtag.hashname %>" の投稿一覧</h2>
 
     <div class="col-xs-2"></div>
 
