--- a/app/views/posts/prefecture.html.erb
+++ b/app/views/posts/prefecture.html.erb
@@ -1,50 +1,18 @@
 <div class="container">
   <div class="row">
 
+    <% @prefecture_posts.first(1).each do |post| %>
+      <h2 class="text-center page-title">"<%= post.prefecture %>" の投稿一覧</h2>
+    <% end %>
+
     <div class="col-xs-12">
       <div class="col-xs-4">
       
-        <div class="box2">
-          <div class="box-title">
-            Category
-          </div>
-          <ul class="list-category">
-            <% @categories.each do |category| %>
-              <li>
-                <%= link_to category_path(@posts, name: category.name) do %>
-                  <%= category.name %>
-                <% end %>
-              </li>
-            <% end %>
-          </ul>  
-        </div>
-      
-        <div class="box2">
-          <div class="box-title">
-            Ranking
-          </div>
-          <ul class="list_crown">
-            <% @all_ranks.each.with_index(1) do |rank, i| %>
-              <li>
-                <%= link_to post_path(rank) do %>
-                  第<%= i %>位<br>
-                  <%= rank.title %>
-                <% end %>
-               </li>
-            <% end %>
-          </ul>
-        </div>
+        <%= render 'posts/category',  categories: @categories %>
 
-        <div class="box2">
-          <div class="box-title">
-            <i class="fas fa-bookmark" aria-hidden="true" style="color: blue;"></i>
-            Prefecture
-          </div>
-          <div class="prefecture-link">
-            <%= link_to '日本地図検索', map_path %>
-            <div class="image-japanmap"></div>
-          </div>
-        </div>
+        <%= render 'posts/all_ranks',  all_ranks: @all_ranks %>
+        
+        <%= render partial: 'posts/prefecture_link' %>
 
       </div>
     
@@ -116,7 +84,7 @@
               </div>
         
               <span class="favorite-count">
-                <span class="post_<%= post.id %>">
+                <span class="favorite_<%= post.id %>">
                   <%= render 'favorites/favorite', post: post %>
                 </span>
 	            </span>
