--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,6 +1,7 @@
 <div class="container"> 
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-2"></div>
+    <div class="col-xs-8">
 
       <% if @model == 'user' %>
         <h3 class="text-center">Users search for '<%= @content %>' </h3>
