--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,16 +3,8 @@
     <div class="col-xs-4"></div>
     <div class="col-xs-4">
 
-      <div class="errors">
-        <%= form_with model: @user, local: true do |f| %>
-          <% if @user.errors.any? %>
-            <%= @user.errors.count %>件のエラーが発生しました
-            <% @user.errors.full_messages.each do |message| %>
-              <%= message %>
-            <% end %>
-          <% end %>
-        <% end %>
-      </div>
+      <%= render 'posts/errors', obj: @user %>
+      
 
       <%= form_with model: @user, local: true do |f| %>
 
