--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-4">
+
       <div class="box1">
         <div class="profile">
           <div class="profile-head">
@@ -95,104 +96,7 @@
     </div>
 
     <div class="col-xs-8">
-      <% @posts.each do |post| %>
-        <div class="box1">
-          <div class="post">
-            <div class="post-head">
-              <h3>POST</h3>
-            </div>
-            <div class="row">
-              <div class="col-xs-3">
-                <div class="post-list">
-                  <%= attachment_image_tag post.user, :profile_image, :fill, 150, 100, format: 'jpg', fallback: "no_image.jpg" %>
-                </div>
-              </div>
-
-              <div class="col-xs-9">
-                <div class="post-list">
-                  投稿者：
-                  <i class="fas fa-user">
-                    <%= post.user.name %>
-                  </i>
-                </div>
-          
-                <div class="post-list">
-                  タイトル：
-                  <%= link_to post_path(post) do %>
-                    <%= post.title %>
-                  <% end %>
-                </div>
-          
-                <div class="post-list">
-                  場所：
-                  <%= post.prefecture %>
-                </div>
-          
-                <div class="post-list">
-                  カテゴリー：
-                  <% post.categories.each do |category| %>
-                    <%= category.name %>
-                  <% end %>
-                </div>
-              </div>
-            </div>
-
-            <div class="post-text">
-              <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
-              <% if post.hashtags.any? %>
-                <% post.hashtags.each do |hashtag| %>
-                  <span>
-                    <%= link_to hashtag_path(post,hashname: hashtag.hashname) do %>
-                      #<%= hashtag.hashname %>
-                    <% end %>
-                  </span>
-                <% end %>
-              <% end %>
-            </div>
-          
-            <div class="post-image">
-		          <% if post.post_images.present? %>
-                <% post.post_images.each do |image| %>
-                  <%= attachment_image_tag image, :image, :fill, 357, 300 %>
-                <% end %>
-              <% end %>
-            </div>
-        
-            <span class="favorite-count">
-              <span class="post_<%= post.id %>">
-                <%= render 'favorites/favorite', post: post %>
-              </span>
-	          </span>
-
-            <span class="bookmark-count">
-              <span class="bookmark_<%= post.id %>">
-                <%= render 'bookmarks/bookmark', post: post %>
-              </span>
-            </span>
-
-            <span class="comment-count">
-              <%= link_to post_path(post.id) do %>
-                <i class="fa fa-comment"></i>
-                <%= post.post_comments.count %>
-              <% end %>
-            </span>
-
-            <span class="look-count">
-              <% if post.user == current_user %>
-                <i class="far fa-eye"></i>
-                <%= post.impressionist_count %>
-              <% end %>
-            </span>
-
-            <span class="date">
-              <i class="far fa-calendar-alt">
-                <%= l post.created_at %>
-              </i>
-            </span>
-           
-          </div>
-        </div>
-      <% end %>
+      <%= render 'posts/index' , posts: @posts %>
       <%= paginate @posts %>
     </div>
   </div>
