--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -14,7 +14,7 @@
   <div class="top-description">
     <div class="top-description-box">
       <div class="top-description-title">
-        <h1>What? LOCAL INFO TOURISM <i class="far fa-hand-point-down fa-xs"></i></h1>
+        <h1>What? LOCAL INFO TOURISM <i class="far fa-hand-point-down fa-xs btn_design"></i></h1>
       </div>
       <div class="top-description-text">
         <p>観光客と地元民をつなぐ交流系の地域ローカル情報サイトです。</p>
@@ -25,19 +25,19 @@
       <div class="about-link">
         <%= link_to home_about_path do %>
           <p>
-            <i class="fas fa-angle-double-right">
+            <i class="fas fa-angle-double-right btn_design">
               詳しい使い方を見る？
             </i>
           </p>
         <% end %>
       </div>
       <div class="top-description-image-box">
-        <div class="image-box"></div>
-        <div class="image-box"></div>
-        <div class="image-box"></div>
-        <div class="image-box"></div>
-        <div class="image-box"></div>
-        <div class="image-box"></div>
+        <div class="image-box btn_design"></div>
+        <div class="image-box btn_design"></div>
+        <div class="image-box btn_design"></div>
+        <div class="image-box btn_design"></div>
+        <div class="image-box btn_design"></div>
+        <div class="image-box btn_design"></div>
       </div>
     </div>
   </div>
