--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -15,7 +15,7 @@
 
     <%= render 'posts/edit_form', form: @post %>
     
-    <%= link_to "戻る", post_path(@post) %>
+    <%= link_to "戻る", post_path(@post), class: "btn btn-success" %>
 
   </div>
 
