--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
     <div class="col-xs-4">
 
       <%= render 'posts/errors', obj: @user %>
-      
+
 
       <%= form_with model: @user, local: true do |f| %>
 
@@ -18,7 +18,7 @@
         </div>
         <div class="text-center">
           <div class="field row">
-            <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+            <%= attachment_image_tag @user, :profile_image, :fill, 200, 200, fallback: "no_image.jpg"%>
           </div>
         </div>
         <div class="field row">
@@ -30,7 +30,7 @@
 
       <% end %>
 
-      <%= link_to "戻る", user_path(@user) %>
+      <%= link_to "戻る", user_path(@user), class: "btn btn-success" %>
 
     </div>
   </div>
