--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,11 +1,11 @@
 <div class="main-visual">
   <!--画像スライド-->
   <div class="theTarget">
-    <div style="background-image: url(/assets/metasekoia.jpg)"></div>
-    <div style="background-image: url(/assets/enosima.jpg)"></div>
     <div style="background-image: url(/assets/kouyou.jpg)"></div>
-    <div style="background-image: url(/assets/ajisai.jpg)"></div>
-    <div style="background-image: url(/assets/sirakawagou.jpg)"></div>
+    <div style="background-image: url(/assets/sky.jpg)"></div>
+    <div style="background-image: url(/assets/yukigeshiki.jpg)"></div>
+    <div style="background-image: url(/assets/coffee.jpg)"></div>
+    <div style="background-image: url(/assets/siwagara.jpg)"></div>
   </div>
 </div>
 
