--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -354,7 +354,7 @@ h4 {
 
 /*トップページ*/
 .main-visual {
-  width: 100%;
+  
   height: 636px;
   background-size: cover;
   background-position: center;
@@ -430,7 +430,7 @@ main {
   box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.8);
 }
 .image-box:nth-child(5) {
-  background-image: image-url("cafe.jpg");
+  background-image: image-url("onsen.jpg");
   margin-right: 10px;
   display: inline-block;
   box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.8);
@@ -608,4 +608,9 @@ main {
 .btn_design:hover{
   transform: translateY(-5px);
   cursor: pointer;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
