--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -11,6 +11,10 @@
 
 <main>
 
+  <div class="main-message-box">
+    <h1 class="main-message">その情報、共有しませんか？</h1>
+  </div>
+
   <div class="top-description">
     <div class="top-description-box">
       <div class="top-description-title">
