--- a/app/views/relationships/followed.html.erb
+++ b/app/views/relationships/followed.html.erb
@@ -10,7 +10,9 @@
           </div>
           <table style="border:none;">
             <tr>
-              <td><%= attachment_image_tag @user, :profile_image, :fill, 320, 250, format: 'jpg', fallback: "no_image.jpg" %></td>
+              <td class="user-image">
+                <%= attachment_image_tag @user, :profile_image, :fill, 330, 330, format: 'jpg', fallback: "no_image.jpg" %>
+              </td>
             </tr>
             <tr>
               <td>
