--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,6 +181,12 @@ h4 {
 .my-list {
   margin: 20px 0;
 }
+.user-image {
+  border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+  overflow: hidden;
+  width:  100px;       /* ※縦横を同値に */
+}
+
 
 /*会員一覧*/
 .follow {
@@ -361,7 +367,7 @@ h4 {
 }
 main {
   width: 100%;
-  height: 900px;
+  height: 1200px;
 }
 .top-description {
   background-color: #ECEFF1;
@@ -443,6 +449,33 @@ main {
 .about-link {
   text-align: right;
 }
+.main-message-box {
+  padding: 30px 0 10px 0;
+  background-color: white;
+}
+.main-message {
+  position: relative;
+  color: #158b2b;
+  font-size: 50px;
+  padding: 10px 0;
+  text-align: center;
+  margin: 1.5em 0;
+}
+.main-message:before {
+  content: "";
+  position: absolute;
+  top: -35px;
+  left: 50%;
+  width: 350px;
+  height: 130px;
+  border-radius: 50%;
+  border: 5px solid #a6ddb0;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
 
 /*アバウトページ*/
 .about-box {
