--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -1,11 +1,11 @@
 <% if post.bookmark_by?(current_user) %>
   <%= link_to post_bookmarks_path(post), method: :delete, remote: true do %>
-    <i class="fas fa-bookmark" aria-hidden="true" style="color: blue;"></i>
+    <i class="fas fa-bookmark btn_design" aria-hidden="true" style="color: blue;"></i>
     <%= post.bookmarks.count %> 行ってみたい
   <% end %>
 <% else %>
   <%= link_to post_bookmarks_path(post), method: :post, remote: true do %>
-    <i class="fa fa-bookmark" aria-hidden="true"></i>
+    <i class="fa fa-bookmark btn_design" aria-hidden="true"></i>
     <%= post.bookmarks.count %> 行ってみたい
   <% end %>
 <% end %>
