--- a/app/views/posts/prefecture.html.erb
+++ b/app/views/posts/prefecture.html.erb
@@ -28,7 +28,9 @@
               <div class="row">
                 <div class="col-xs-3">
                   <div class="post-list">
-                    <%= attachment_image_tag post.user, :profile_image, :fill, 150, 100, format: 'jpg', fallback: "no_image.jpg" %>
+                    <div class="user-image">
+                      <%= attachment_image_tag post.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "no_image.jpg" %>
+                    </div>
                   </div>
                 </div>
             
