--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -6,13 +6,13 @@
         
     <div class="row">
       <div class="profile-box">
-        <div class="col-xs-4">
-          <div class="box-user">
-            <%= attachment_image_tag user, :profile_image, :fill, 200, 150, format: 'jpg', fallback: "no_image.jpg" %>
+        <div class="col-xs-3">
+          <div class="user-image">
+            <%= attachment_image_tag user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "no_image.jpg" %>
           </div>
         </div>
         
-        <div class="col-xs-8">
+        <div class="col-xs-9">
           <div class="row">
             <div class="profile-name">
               <%= link_to user_path(user) do %>
