[Add]logo_design

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -11,8 +11,8 @@
 
 <main>
 
-  <div class="main-message-box">
-    <h1 class="main-message">その情報、共有しませんか？</h1>
+  <div class="main-message-box text-center">
+    <img src="/assets/message_logo.png" alt="logo" width="800" height="100" >
   </div>
 
   <div class="top-description">
