[Fix]top_about_layout

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -12,7 +12,7 @@
           <p class="about-text">お出かけ先のあの場所がよかった。あのお店のランチとても美味しかったよ。</p>
           <p class="about-text">
             <i class="fas fa-plus-circle fa-lg"></i>
-            から投稿してみましょう。タイトル、都道府県、カテゴリーを選択して
+            から投稿してみましょう。タイトル、都道府県、カテゴリーを入力して
           </p>
           <p class="about-text">思い出やおすすめスポットの共有、お出かけ前の質問に活用してみましょう。</p>
         </div>
