--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,7 +86,7 @@ body {
 .wrapper{
   min-height: 100vh;
   position: relative;
-  padding-bottom: 150px;
+  padding-bottom: 130px;
   box-sizing: border-box;
   background-color: #ECEFF1;
 }
@@ -366,7 +366,7 @@ h4 {
 }
 main {
   width: 100%;
-  height: 1200px;
+  height: 1250px;
 }
 .top-description {
   background-color: #ECEFF1;
@@ -391,10 +391,12 @@ main {
   background-color: #003366;
 }
 .top-description-text {
-  font-size: 18px;
   color: #000000;
   text-align: center;
   margin: 30px 0;
+  p {
+    font-size: 18px;
+  }
 }
 .top-description-image-box {
   display: flex;
@@ -502,6 +504,7 @@ main {
 }
 .about-text {
   font-size: 20px;
+  line-height: 35px;
 }
 .about-text-box {
   margin: 30px auto;
