--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <%= link_to root_path do %>
-    <h1 class="headline btn_design"><img src="/assets/title_logo.png" alt="logo" width="45" height="45" >LOCAL INFO TOURISM</h1>
+    <h1 class="headline btn_design"><img src="/title_logo.png" alt="logo" width="45" height="45" >LOCAL INFO TOURISM</h1>
   <% end %>
 
   <% if user_signed_in? %>
