--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -13,7 +13,7 @@
 
   <div class="main-message-box text-center">
     <!--<img src="/assets/message_logo.png" alt="logo" width="800" height="100" >-->
-    <%= image_tag '/message_logo.png', :size =>'800x100' %>
+    <%= image_tag asset_path("message_logo.png"), :size =>'800x100' %>
   </div>
 
   <div class="top-description">
