[Fix]about_logo

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -19,14 +19,14 @@
       </div>
       <div class="col-xs-4">
         <div class="about-image1"></div>
-        <img src="/assets/about-logo1.png" alt="logo" width="150" height="100" class="btn_design">
+        <%= image_tag asset_path("about-logo1.png"), :size =>'150x100' %>
       </div>
     </div>
 
     <div class="col-xs-12 about-text-box">
       <div class="col-xs-4">
         <div class="about-image2"></div>
-        <img src="/assets/about-logo2.png" alt="logo" width="150" height="100" class="btn_design">
+        <%= image_tag asset_path("about-logo2.png"), :size =>'150x100' %>
       </div>
       <div class="col-xs-8">
         <h2 class="about-step">STEP2 探してみよう</h2>
@@ -51,14 +51,14 @@
       </div>
       <div class="col-xs-4">
         <div class="about-image3"></div>
-        <img src="/assets/about-logo3.png" alt="logo" width="150" height="100" class="btn_design">
+        <%= image_tag asset_path("about-logo3.png"), :size =>'150x100' %>
       </div>
     </div>
 
     <div class="col-xs-12 about-text-box">
       <div class="col-xs-4">
         <div class="about-image4"></div>
-        <img src="/assets/about-logo4.png" alt="logo" width="150" height="100" class="btn_design">
+        <%= image_tag asset_path("about-logo4.png"), :size =>'150x100' %>
       </div>
       <div class="col-xs-8">
         <h2 class="about-step">STEP4 リストを作ろう</h2>
