--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="field">
+      <div class="field", style="padding-top: 50px;">
         <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "ユーザー名", :size=>"60" %>
       </div>
 
