--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -236,6 +236,7 @@ h4 {
   background-color: #EEEEEE;
   border-radius: 10px;
   padding: 5px;
+  margin-bottom: 10px;
 }
 .post-image {
   margin: 0 0 30px 0;
