[Fix]image_layout

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -12,7 +12,7 @@
           <p class="about-text">お出かけ先のあの場所がよかった。あのお店のランチとても美味しかったよ。</p>
           <p class="about-text">
             <i class="fas fa-plus-circle fa-lg"></i>
-            から投稿してみましょう。タイトル、都道府県、カテゴリーを入力して
+            から投稿してみましょう。都道府県、カテゴリ、ハッシュタグを入力して
           </p>
           <p class="about-text">思い出やおすすめスポットの共有、お出かけ前の質問に活用してみましょう。</p>
         </div>
@@ -32,7 +32,7 @@
         <h2 class="about-step">STEP2 探してみよう</h2>
         <div class="about-steps">
           <p class="about-text">皆さんが投稿したお出かけ先の情報には様々な検索方法があります。</p>
-          <p class="about-text">カテゴリー、投稿内容、ハッシュタグ、日本地図からの都道府県検索など。</p>
+          <p class="about-text">投稿内容、カテゴリ、ハッシュタグ、日本地図からの都道府県検索など。</p>
           <p class="about-text">お出かけ前に他の人がどんな場所をおすすめしているかを調べてみましょう。</p>
           <p class="about-text">きっとまだあなたの知らないスポットや、行きたい場所が見つかるはずです。</p>
         </div>
