--- a/app/views/posts/_category.html.erb
+++ b/app/views/posts/_category.html.erb
@@ -1,5 +1,5 @@
 <div class="box2">
-  <div class="box-title">カテゴリー一覧</div>
+  <div class="box-title">Category</div>
   <ul class="list-category">
     <% categories.each do |category| %>
       <li>
