[Fix]top_about_text

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -44,7 +44,7 @@
         <h2 class="about-step">STEP3 交流してみよう</h2>
         <div class="about-steps">
           <p class="about-text">この投稿の質問は私の地元だ。おすすめのお店やスポットを知っているぞ。</p>
-          <p class="about-text">この人が行った旅行の投稿内容に興味があるな。もっと詳しく知りたいな。</p>
+          <p class="about-text">あの人が行った旅行の投稿内容に興味があるな。もっと詳しく知りたいな。</p>
           <p class="about-text">気になる時ありますよね。コメントやチャットを通じて交流してみましょう。</p>
           <p class="about-text">もちろん投稿に対する感想でも大丈夫です。どんどん交流しましょう。</p>
         </div>
@@ -63,7 +63,7 @@
       <div class="col-xs-8">
         <h2 class="about-step">STEP4 リストを作ろう</h2>
         <div class="about-steps">
-          <p class="about-text">次の旅行ではこの人の投稿のおすすめスポットに行ってみたいな。</p>
+          <p class="about-text">次の旅行ではあの人の投稿のおすすめスポットに行ってみたいな。</p>
           <p class="about-text">地元にこんな場所があったんだ。今度の週末に行ってみるか。</p>
           <p class="about-text">
             投稿の
