--- a/app/views/posts/_category.html.erb
+++ b/app/views/posts/_category.html.erb
@@ -1,4 +1,4 @@
-<div class="box2">
+<div class="sub-box">
   <div class="box-title">Category</div>
   <ul class="list-category">
     <% categories.each do |category| %>
