--- a/app/views/posts/prefecture.html.erb
+++ b/app/views/posts/prefecture.html.erb
@@ -19,7 +19,7 @@
       <div class="col-xs-8">
 
         <% @prefecture_posts.each do |post| %>
-          <div class="box1">
+          <div class="main-box">
             <div class="post">
               <div class="post-head">
                 <h3>POST</h3>
