--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,5 +1,5 @@
 <% users.each do |user| %>
-  <div class="box1">
+  <div class="main-box">
     <div class="profile-head">
       <h3>PROFILE</h3>
     </div>
