--- a/app/views/users/_my_list.html.erb
+++ b/app/views/users/_my_list.html.erb
@@ -1,7 +1,7 @@
 <% lists.each do |bookmark| %>
   <% post = Post.find_by(id: bookmark.post_id) %>
   
-    <div class="box1">
+    <div class="main-box">
       <div class="post">
         <div class="post-head">
           <h3>POST</h3>
