--- a/app/views/posts/_all_ranks.html.erb
+++ b/app/views/posts/_all_ranks.html.erb
@@ -1,4 +1,4 @@
-<div class="box2">
+<div class="sub-box">
   <div class="box-title">
     <i class="fas fa-bookmark" aria-hidden="true" style="color: blue;"></i>
     Ranking
