--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,5 +1,5 @@
 <% posts.each do |post| %>
-  <div class="box1">
+  <div class="main-box">
     <div class="post">
       <div class="post-head">
         <h3>POST</h3>
