--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-4">
-      <div class="box1">
+      <div class="main-box">
         <div class="profile">
           <div class="profile-head">
             <h3>PROFILE</h3>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="col-xs-8">
-      <div class="box1">
+      <div class="main-box">
         <div class="post">
           <div class="post-head">
             <h3>POST</h3>
