--- a/app/views/relationships/followed.html.erb
+++ b/app/views/relationships/followed.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row"> 
     <div class="col-xs-4">
-      <div class="box1">
+      <div class="main-box">
         <div class="profile">
           <div class="profile-head">
             <h3>PROFILE</h3>
