--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
 
         <div class="field row">
           <%= f.label :name %>
-          <%= f.text_field :name, class: "form-control", placeholder:"名前" %>
+          <%= f.text_field :name, class: "form-control" %>
         </div>
         <div class="field row">
           <%= f.label :introduction %>
