--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,10 @@ header .headline {
   display: inline-block;
   margin: 0 20px;
 }
+.search {
+  position: relative;
+  bottom: 5px;
+}
 
 /*フッター*/
 footer {
