--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
           <%= link_to '通知一覧', notifications_path %>
         </i>
       </li>
-      <li class="nav-list-item">
+      <li class="nav-list-item search">
         <%= form_tag(search_path, method: :get) do %>
           <%= text_field_tag 'search[content]', "", placeholder: "キーワード検索" %>
           <%= select_tag 'search[model]', options_for_select({"ユーザー" => "user", "投稿内容" => "post"}) %>
