--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="field row">
     <%= f.label :prefecture, '都道府県' %><br>
-    <%= f.select :prefecture, Post.prefectures.keys, {prompt: '選択してください'}, class: 'signup_input signup_input--prefecture error-form--prefecture'%>
+    <%= f.select :prefecture, Post.prefectures.keys, {prompt: '選択してください'} %>
   </div>
   <div class="field row">
     <%= f.label :category, 'カテゴリー' %><br>
@@ -17,7 +17,7 @@
     <% end %>
   </div>
   <div class="field row">
-    <%= f.label :投稿内容 %> (#(半角)でハッシュタグ投稿)
+    <%= f.label :投稿内容 %> (半角#でハッシュタグ投稿)
     <%= f.text_area :body, class: "form-control" %>
   </div>
   <div class="field row">
