--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container", style="margin-top: 40px;">
   <div class="row">
     <div class="col-xs-4"></div>
     <div class="col-xs-4">
