[Fix]hashtag_display

--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -54,6 +54,8 @@
               <% end %>
             </span>
           <% end %>
+        <% else %>
+          <%= post.body %>
         <% end %>
       </div>
         
