--- a/app/views/posts/prefecture.html.erb
+++ b/app/views/posts/prefecture.html.erb
@@ -74,6 +74,8 @@
                       <% end %>
                     </span>
                   <% end %>
+                <% else %>
+                  <%= post.body %>
                 <% end %>
               </div>
         
