--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -147,6 +147,8 @@
                   <% end %>
                 </span>
               <% end %>
+            <% else %>
+              <%= @post.body %>
             <% end %>
           </div>
           
