--- a/app/views/users/_my_list.html.erb
+++ b/app/views/users/_my_list.html.erb
@@ -56,6 +56,8 @@
               <% end %>
             </span>
           <% end %>
+        <% else %>
+          <%= post.body %>
         <% end %>
       </div>
         
